--- a/src/app/pages/mobile/dashboard/dashboard/dashboard.page.scss
+++ b/src/app/pages/mobile/dashboard/dashboard/dashboard.page.scss
@@ -1,26 +1,9 @@
-.background-image {
-    object-fit: resize;
-    height: 100%;
-    width: auto !important;
-    border: 0;
+ion-card {
+    background-size: 100%;
     padding: 0;
-    background-color: grey
 }
 
-background-image {
-    object-fit: resize;
-			height: 100%;
-			width: auto !important;
-			border: 0;
-			padding: 0;
-			background-color: grey
-}
-
-.image--size {
-    object-fit: resize;
-    height: 100%;
-    width: auto !important;
-    border: 0;
-    padding: 0;
-    background-color: grey
+ion-text {
+    font: bold;
+    color: white;
 }
