--- a/src/app/pages/mobile/restaurant/restaurant.page.html
+++ b/src/app/pages/mobile/restaurant/restaurant.page.html
@@ -12,23 +12,20 @@
 
   <app-days-navbar (changed)="navbarClickChangeDay($event)"></app-days-navbar>
 
-  <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel" id="searchbar" position="floating" (ionChange)=search($event)>
+  <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel" id="searchbar" position="floating"
+    (ionChange)=search($event)>
   </ion-searchbar>
 
-  <ion-list>
-    <ion-card>
-      <span>
-        <app-meal *ngFor="let meal of currentDayMeals; index as i" [menuDish]="meal"
-        (click)="mealCardClicked_AddToCart(meal)" [inCart]="meal.inCart"></app-meal> 
-      </span>
-    </ion-card>
-  </ion-list>
+  <span>
+    <app-meal *ngFor="let meal of currentDayMeals; index as i" [menuDish]="meal"
+      (click)="mealCardClicked_AddToCart(meal)" [isAdded]="meal.inCart"></app-meal>
+  </span>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button [disabled]='false' (click)="showCart()" [routerLink]="['/mobile/tabs/cart']"> <!-- currentDayMeals?.length  -- za disabled-->
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" [ngClass]="{'cartButtonHidden': orders?.length === 0}">
+    <ion-badge>{{orders?.length || 0}}</ion-badge>
+    <ion-fab-button [disabled]='false' (click)="showCart()" [routerLink]="['/mobile/tabs/cart']">
       <ion-icon name="cart"></ion-icon>
     </ion-fab-button>
-    <ion-badge>{{orders?.length || 0}}</ion-badge>
   </ion-fab>
 
 </ion-content>
