--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -237,12 +237,12 @@
 
 
 :root {
-  --ion-color-primary: #cac249;
-  --ion-color-primary-rgb: 202,194,73;
-  --ion-color-primary-contrast: #000000;
-  --ion-color-primary-contrast-rgb: 0,0,0;
-  --ion-color-primary-shade: #b2ab40;
-  --ion-color-primary-tint: #cfc85b;
+  --ion-color-primary: #1CBA5B;
+  --ion-color-primary-rgb: 28,186,91;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #19a450;
+  --ion-color-primary-tint: #33c16b;
 
   --ion-color-secondary: #3dc2ff;
   --ion-color-secondary-rgb: 61,194,255;
@@ -251,12 +251,12 @@
   --ion-color-secondary-shade: #36abe0;
   --ion-color-secondary-tint: #50c8ff;
 
-  --ion-color-tertiary: #5260ff;
-  --ion-color-tertiary-rgb: 82,96,255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255,255,255;
-  --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
+  --ion-color-tertiary: #fbca60;
+  --ion-color-tertiary-rgb: 251,202,96;
+  --ion-color-tertiary-contrast: #000000;
+  --ion-color-tertiary-contrast-rgb: 0,0,0;
+  --ion-color-tertiary-shade: #ddb254;
+  --ion-color-tertiary-tint: #fbcf70;
 
   --ion-color-success: #2dd36f;
   --ion-color-success-rgb: 45,211,111;
