--- a/src/app/pages/mobile/profile/profile/profile.page.html
+++ b/src/app/pages/mobile/profile/profile/profile.page.html
@@ -5,5 +5,19 @@
 </ion-header>
 
 <ion-content>
+  <h1>{{username}}</h1>
+
+  <ion-item [routerLink]="['/mobile/my-orders']">
+    <ion-text>My orders</ion-text>
+    <ion-icon name="caret-forward-outline"></ion-icon>
+  </ion-item>
+  <ion-item>
+    <ion-text expand="full" fill="no-border">My payment cards</ion-text>
+    <ion-icon name="caret-forward-outline"></ion-icon>
+  </ion-item>
+  <ion-item>
+    <ion-text expand="full" fill="no-border">My adress</ion-text>
+    <ion-icon name="caret-forward-outline"></ion-icon>
+  </ion-item>
 
 </ion-content>
