--- a/src/app/pages/web/dashboard/dashboard.page.scss
+++ b/src/app/pages/web/dashboard/dashboard.page.scss
@@ -1,52 +1,26 @@
 #heading {
-    float: left; 
+    float: left;
     margin-left: 40%;
 }
 
 #searchbar {
-    float: right; 
-    width: 30%;
+    float: right;
+    width: 20%;
+    margin-right: 80px;
 }
 
 .gridHeader {
     text-align: center;
 }
 
-section {
+ion-grid {
     display: flex;
     clear: both;
     margin-left: 7%;
 }
 
-article {
-    flex: 1;
+ion-col {
     margin: 20px;
     text-align: center;
-    align-items: center;    
-}
-
-.days {
-    float: left;
-    width: 7%;
-    height: 100%;
-    background-color: #1CBA5B;
-    position: fixed;
-}
-
-// meal
-.day {
-    width: 100%;
-    height: (100%/6);
-    padding: 20px;
-    float: left;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    color: white; 
-    font-weight: bolder;
-    cursor: pointer;
-}
-.active-day {
-    color:  #1CBA5B;
-    background-color: white;
 }
