--- a/src/app/pages/web/new-meal/new-meal.page.scss
+++ b/src/app/pages/web/new-meal/new-meal.page.scss
@@ -2,7 +2,7 @@
     float: left;
     width: 7%;
     height: 100%;
-    background-color: #1CBA5B;
+    --ion-background-color: #1CBA5B;
     position: fixed;
 }
 .day {
@@ -18,10 +18,19 @@
     cursor: pointer;
 }
 
+.logo {
+    height: auto;
+    width: auto;
+}
+
+h1 {
+    margin: 50px;
+}
+
 .center {
     padding-left: 40px;
     width: 30%;
-    margin-left: 7%;  
+    margin-left: 10%;  
 }
 
 .userInput {
@@ -31,3 +40,4 @@
 .separate {
     margin: 4px;
 }
+
