--- a/src/app/pages/web/new-meal/new-meal.page.scss
+++ b/src/app/pages/web/new-meal/new-meal.page.scss
@@ -41,3 +41,11 @@ h1 {
     margin: 4px;
 }
 
+#mealImage {
+    background-size: 100%;
+    padding: 0;
+    margin: 20px;
+    border: 2px black solid;
+    width: 400px;
+    height: 300px;
+}
