--- a/src/app/components/meal/meal.component.html
+++ b/src/app/components/meal/meal.component.html
@@ -1,8 +1,8 @@
 <ion-card class="mealCard" [ngClass]="{'colorCardIfAdded': isAdded}">
-  <ion-img src="assets/images/Ellipse 1.png" id="mealImage"></ion-img>
+  <ion-img [src]="mealImage === undefined ? 'assets/images/Ellipse 1.png' : mealImage" id="mealImage"></ion-img>
   <h1>{{mealName}}</h1>
   <p>{{salad}}, {{bread}}, {{soup}}</p>
-  <p>Količina: {{kolicina}}</p>
+  <p [hidden]="quantity === 0">Količina: {{quantity}}</p>
   <ion-item class="dayLabel" [ngClass]="{'dayLabelHidden': mealOrderDay === undefined ? true : false}">
     <h3>{{dayNames[mealOrderDay-1]}}</h3>
   </ion-item>
