--- a/src/app/pages/web/new-meal/new-meal.page.scss
+++ b/src/app/pages/web/new-meal/new-meal.page.scss
@@ -49,3 +49,13 @@ h1 {
     width: 400px;
     height: 300px;
 }
+
+.buttonsManageImage {
+    border-radius: 20px;
+    padding: 15px;
+    margin: 20px;
+}
+
+#checkinImage {
+    align-self: center;
+}
