--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-content>
 
-  <ion-icon [ngClass]="{'active': !service.logiran}" name="wifi-outline"></ion-icon>
+  <ion-icon [ngClass]="{'active': !loggedIn}" name="wifi-outline"></ion-icon>
   <ion-img src="assets\images\LOGO2-01 1.png" id="appLogo"></ion-img>
 
   <div class="center">
