--- a/src/app/pages/mobile/my-orders/my-orders.page.html
+++ b/src/app/pages/mobile/my-orders/my-orders.page.html
@@ -6,8 +6,8 @@
     <ion-title>My orders</ion-title>
 
     <ion-buttons slot="secondary">
-      <ion-button>
-        Group
+      <ion-button (click)="toggleGrouping()">
+        {{grouped ? 'GROUPED' : 'UNGROUPED'}}
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -18,7 +18,8 @@
   <app-days-navbar (changed)="navbarClickChangeDay($event)"></app-days-navbar>
 
   <span>
-    <app-meal *ngFor="let order of currentDayOrders; index as i" [userOrder]="order" [mealImage]="getMealImage(order.dishName)"></app-meal>
+    <app-meal *ngFor="let order of currentDayOrders; index as i" [userOrder]="order" [mealImage]="getMealImage(order.dishName)"
+    [quantity]="this.grouped === true ? getAmountOf(order.dishName) : 0"></app-meal>
   </span>
 
 </ion-content>
